WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102130
[chromium] Pass showDebugBorders directly to WebLayerTreeSettings, don't use the GraphicsLayer border width setting.
https://bugs.webkit.org/show_bug.cgi?id=102130
Summary
[chromium] Pass showDebugBorders directly to WebLayerTreeSettings, don't use ...
Dana Jansens
Reported
2012-11-13 13:40:09 PST
[chromium] Pass showDebugBorders directly to WebLayerTreeSettings, don't use the GraphicsLayer border width setting.
Attachments
Patch
(8.24 KB, patch)
2012-11-13 13:42 PST
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.12 KB, patch)
2012-11-13 19:46 PST
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2012-11-13 13:42:31 PST
Created
attachment 173977
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-13 16:00:51 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 3
2012-11-13 19:12:46 PST
Comment on
attachment 173977
[details]
Patch Rejecting
attachment 173977
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Kit/chromium/third_party/yasm/source/patched-yasm --revision 154708 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 50>At revision 154708. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/14817890
Dana Jansens
Comment 4
2012-11-13 19:46:36 PST
Created
attachment 174055
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-11-13 22:08:06 PST
Comment on
attachment 174055
[details]
Patch for landing Rejecting
attachment 174055
[details]
from commit-queue. New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html Full output:
http://queues.webkit.org/results/14824589
Dana Jansens
Comment 6
2012-11-13 22:19:05 PST
Comment on
attachment 174055
[details]
Patch for landing pretty sure that wasnt this CL, it passed CQ last try (minus changelogs)
WebKit Review Bot
Comment 7
2012-11-13 22:37:52 PST
Comment on
attachment 174055
[details]
Patch for landing Clearing flags on attachment: 174055 Committed
r134547
: <
http://trac.webkit.org/changeset/134547
>
WebKit Review Bot
Comment 8
2012-11-13 22:37:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug