[chromium] Pass showDebugBorders directly to WebLayerTreeSettings, don't use the GraphicsLayer border width setting. https://bugs.webkit.org/show_bug.cgi?id=102130

Reviewed by James Robinson.

Source/Platform:

* chromium/public/WebLayerTreeView.h:
(WebKit::WebLayerTreeView::Settings::Settings):
(Settings):

Source/WebCore:

The current method of setting debug borders on GraphicsLayers requires
every GraphicsLayerClient to set the value on the layer(s) it
represents. This skips the NonCompositedContentHost as well as any
other clients other than RenderLayerBacking - including layers from the
inspector.

Instead, pass the debug border setting directly to the
WebLayerTreeSettings where the compositor can use the flag to enable
borders on all layers globally.

* platform/graphics/chromium/GraphicsLayerChromium.cpp:
(WebCore::GraphicsLayerChromium::GraphicsLayerChromium):
(WebCore::GraphicsLayerChromium::updateMasksToBounds):
(WebCore::GraphicsLayerChromium::updateLayerIsDrawable):
(WebCore::GraphicsLayerChromium::setupContentsLayer):
* platform/graphics/chromium/GraphicsLayerChromium.h:
(GraphicsLayerChromium):

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
(WebKit):


Canonical link: https://commits.webkit.org/120272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134547 268f45cc-cd09-0410-ab3c-d52691b4dbfc